manifest/dev/gauthz-web-deployment.dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gauthz-web-dev
  labels:
    app: gauthzwebdev
    name: gauthz-web-dev
    kind: deployment
    tier: web
    purpose: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gauthzwebdev
      name: gauthz-web-dev
      kind: deployment
      tier: web
      purpose: dev
  template:
    metadata:
      labels:
        app: gauthzwebdev
        name: gauthz-web-dev
        kind: deployment
        tier: web
        purpose: dev
    spec:
      containers:
      - name: web
        image: gammondev.azurecr.io/gauthz-web-dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
