manifest/dev/gptw-web-deployment.dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gptw-web-dev
  labels:
    app: gptwwebdev
    name: gptw-web-dev
    kind: deployment
    tier: web
    purpose: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gptwwebdev
      name: gptw-web-dev
      kind: deployment
      tier: web
      purpose: dev
  template:
    metadata:
      labels:
        app: gptwwebdev
        name: gptw-web-dev
        kind: deployment
        tier: web
        purpose: dev
    spec:
      containers:
      - name: web
        image: gammondev.azurecr.io/gptw-web-dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
