manifest/dev/qsk-web-deployment.dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qsk-web-dev
  labels:
    app: qskwebdev
    name: qsk-web-dev
    kind: deployment
    tier: web
    purpose: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qskwebdev
      name: qsk-web-dev
      kind: deployment
      tier: web
      purpose: dev
  template:
    metadata:
      labels:
        app: qskwebdev
        name: qsk-web-dev
        kind: deployment
        tier: web
        purpose: dev
    spec:
      containers:
      - name: web
        image: gammondev.azurecr.io/qsk-web-dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
