manifest/dev/qsk-web-service.dev.yml

apiVersion: v1
kind: Service
metadata:
  name: qsk-web-dev-svc
  labels:
    app: qskwebdev
    name: qsk-web-dev
    kind: service
    tier: web
    purpose: dev
spec:
  selector:
    app: qskwebdev
    name: qsk-web-dev
    kind: deployment
    tier: web
    purpose: dev
  ports:
  - port: 80
    targetPort: 80
