manifest/dev/gauthz-web-ingress.dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: internal
  name: gauthz-web-dev-ingress-internal
  namespace: aat-test
  labels:
    app: gauthz-web-dev
    name: gauthz-web-dev
    kind: ingress
    tier: web
    purpose: dev
    ingress: internal
spec:
  rules:
  - host: "gauthz-web-poc.dev.gammonconstruction.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
           name: gauthz-web-dev-svc
           port: 
            number: 80
