manifest/dev/qsk-web-ingress.dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: internal
  name: qsk-web-dev-ingress-internal
  namespace: aat-test
  labels:
    app: qsk-web-dev
    name: qsk-web-dev
    kind: ingress
    tier: web
    purpose: dev
    ingress: internal
spec:
  rules:
  - host: "qsk-web-poc.dev.gammonconstruction.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: qsk-web-dev-svc
            port: 
              number: 80
